🔧 Enhance AI integration by adding URL safety checks and password strength analysis; update environment configuration with new API keys and model names; adjust Content Security Policy for improved security.

--- a/env.sample
+++ b/env.sample
@@ -15,3 +15,6 @@ NEXT_PUBLIC_LOGGING_VERBOSE=
 
 AUTH_SUBDOMAIN=accounts
 APP_SUBDOMAIN=whisperrnote.space
+
+GOOGLE_API_KEY=
+GEMINI_MODEL_NAME=gemini-2.0-flash
